syntax = "proto3";

package auth;

service AuthService {
  rpc PostLogin (PostLoginDto) returns (ResponseLogin) {}
}

message PostLoginDto {
  string username = 1;
  string password = 2;
}

message ResponseLogin {
  int32 id = 1;
  string username = 2;
  string role = 3;
}